[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"


[[bin]]
name = "server"
path = "src/bin/App/server.rs"
[[bin]]
name= "client"
path="src/bin/App/client.rs"

[[bin]]
name= "lb"
path="src/bin/load_balancer/load_balancer.rs"
